--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "antd": "~3.15.1",
     "babel-core": "~6.26.3",
     "babel-loader": "~7.1.5",
     "babel-plugin-import": "~1.11.0",
@@ -27,7 +26,9 @@
     "webpack-dev-server": "~3.2.1"
   },
   "dependencies": {
+    "antd": "~3.15.1",
     "react": "~16.8.4",
-    "react-dom": "~16.8.4"
+    "react-dom": "~16.8.4",
+    "react-router-dom": "~5.0.0"
   }
 }
